<resources>
    <string name="app_name">BinarChallengeChapter7</string>
    <string name="hint_email">email</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="login_don_t_have_an_account">Belum punya akun? Daftar</string>
    <string name="already_have_an_account">Sudah punya akun? Masuk</string>
    <string name="register">Register</string>
    <string name="daftar">DAFTAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>